--- a/index.css
+++ b/index.css
@@ -9,6 +9,8 @@ body {
   overflow: hidden;
 }
 canvas {
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
